focus on title extraction

--- a/demo_data/pecha-kucha-aud/view.html
+++ b/demo_data/pecha-kucha-aud/view.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pecha Kucha - Audio Only</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
@@ -65,14 +64,14 @@
     <div class="container">
         <h1>Pecha Kucha</h1>
         <div class="meta">
-            <strong>Type:</strong> Audio Only (M4A)<br>
+            <strong>Type:</strong> Audio Only (MP3)<br>
             <strong>Format:</strong> AAC Audio with Subtitles Available
         </div>
 
         <img src="thumbnail.webp" alt="Pecha Kucha Thumbnail" class="thumbnail">
 
         <audio controls>
-            <source src="aud.m4a" type="audio/mp4">
+            <source src="aud.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
 
