add multi video embed demo

--- a/demo_data/pecha-kucha-aud/view.html
+++ b/demo_data/pecha-kucha-aud/view.html
@@ -65,7 +65,7 @@
         <h1>Pecha Kucha</h1>
         <div class="meta">
             <strong>Type:</strong> Audio Only (MP3)<br>
-            <strong>Format:</strong> AAC Audio with Subtitles Available
+            <strong>Format:</strong> AAC Audio with Subtitles and embedded title metadata
         </div>
 
         <img src="thumbnail.webp" alt="Pecha Kucha Thumbnail" class="thumbnail">
